Giving authors a chance to change the Template Heading in the .tex file

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,15 @@
 
 \pagestyle{pagemain}
 
+
+%The Author should select the appropriate pretitle below:
+\pretitle{
+  %\centering \selectfont LEDGER \LaTeX \ TEMPLATE \par
+  %\blankline
+  \centering \selectfont Review Article \par 
+  \fontsize{24pt}{28pt}\selectfont} % Title is centered and at 24pt
+
+
 \begin{document}
 
 \maketitle
