--- a/ledger.cls
+++ b/ledger.cls
@@ -71,7 +71,7 @@
 
 \hypersetup{bookmarks=false, hidelinks=true, unicode=true, pageanchor=false}
 
-\AtBeginDocument{\urlstyle{same}}
+%\AtBeginDocument{\urlstyle{same}}
 
 
 % here are all the headers
@@ -86,7 +86,7 @@
     \rhead{\raisebox{1cm-\height}
     {\begin{minipage}[t]{.48\textwidth}
       \begin{flushright}
-      \fontsize{8pt}{8pt}\selectfont \sffamily\color{gray}SSN 2379-5980 (online) \\ DOI.5195/LEDGER.2015.id
+      \fontsize{8pt}{8pt}\selectfont \sffamily\color{gray}SSN 2379-5980 (online) \\ \thedoi
       \end{flushright}
     \end{minipage}}
     }
@@ -96,7 +96,7 @@
   \fancyhf{}%
   % \lhead{\includegraphics[height=1cm]{logoNew}}%
   % \lhead{Left top main }%
-  \chead{\raisebox{1cm-\height}{LEDGER VOL. X, NO X (201X) XX-XX}}
+  \chead{\raisebox{1cm-\height}{LEDGER VOL 1 (2016) \ledgerpages}}
   \cfoot{\raisebox{0.25cm-\height}{\textbf{\thepage}}}
   \lfoot{\raisebox{0.5cm-\height}{\includegraphics[height=0.3cm]{logoSmall}}}%
 
@@ -106,7 +106,7 @@
   \rfoot{\raisebox{0.5cm-\height}
     {\begin{minipage}[t]{.48\textwidth}
       \begin{flushright}
-      \fontsize{8pt}{8pt}\selectfont \sffamily\color{gray}SSN 2379-5980 (online) \\ DOI.5195/LEDGER.2015.id
+      \fontsize{8pt}{8pt}\selectfont \sffamily\color{gray}SSN 2379-5980 (online) \\ \thedoi
       \end{flushright}
     \end{minipage}}}
 }
