adding extra guidance in main.tex for setting PDF metadata

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,10 @@
 \newcommand{\ledgerpages}[0]{\thefirstpagenum-\thelastpagenum}
 
 
+%AUTHOR: please set these to generate correct PDF metadata
+\hypersetup{pdfauthor={First Last}, pdftitle={This is a Title}}
+
+
 %EDITOR: set the correct pageination during layout
 \setcounter{page}{\thefirstpagenum}
 
